# Flask-Api

./: .gitignore  README.md  config.yaml  flask_00_idempotency_demo.py  flask_04_jwt_auth_app.py  flask_06_mysql_app.py  pyproject.toml  requirements.txt  test_mysql.py
api_demo/: README.md  config_template.yaml  flask_01_simple_app.py  flask_02_crud_app.py  flask_03_basic_auth_app.py  flask_04_jwt_auth_app.py  flask_05_jwt_auth_swagger_app.py  flask_06_db_config.py  flask_06_mysql_app.py  flask_oauth_jwt_sample.py  requirements.txt
tests/: test_01.py  test_02.py  test_03.py  test_04.py
ven/: pyvenv.cfg
ven/Scripts/: activate  activate.bat
