[tool.poetry]
name = "python_flask_demo"
version = "0.1.0"
description = ""
authors = ["Ganesh Chandrasekaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-restful = "^0.3.10"
flask-httpauth = "^4.8.0"
pyyaml = "^6.0.2"
pyjwt = "^2.9.0"
pymysql = "^1.1.1"
flask-jwt-extended = "^4.6.0"
flask-restx = "^1.3.0"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
